fixed spacing of text box

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,7 @@
     display: block; 
     margin-left: auto; 
     margin-right: auto;
+    text-align: left;
 }
 
 #codebox {
